--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   "license": "MIT",
   "devDependencies": {
     "webpack": "^2.2.1"
+  },
+  "scripts": {
+    "build": "node_modules/.bin/webpack app.js dist/bundle.js"
   }
 }
