--- a/package.json
+++ b/package.json
@@ -9,6 +9,6 @@
     "webpack": "^2.2.1"
   },
   "scripts": {
-    "build": "node_modules/.bin/webpack app.js dist/bundle.js"
+    "build": "node_modules/.bin/webpack"
   }
 }
