--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "webpack": "^2.2.1"
   },
   "scripts": {
-    "build": "node_modules/.bin/webpack"
+    "build": "node_modules/.bin/webpack",
+    "watch": "node_modules/.bin/webpack --watch"
   }
 }
