Build for production.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "webpack": "^2.2.1"
   },
   "scripts": {
-    "build": "node_modules/.bin/webpack",
+    "build:dev": "node_modules/.bin/webpack",
+    "build:dist": "node_modules/.bin/webpack -p",
     "watch": "node_modules/.bin/webpack --watch"
   }
 }
